platform_versioned_docs/version-4.11.0/maintenance/monitoring/overview.mdx
---
title: Monitoring
sidebar_label: Overview
sidebar_position: 1
description: Monitor vCluster Platform health, workload metrics across tenant clusters, and logs with Prometheus, OpenTelemetry, and Grafana.
---

import NavStep from "@site/src/components/NavStep";

vCluster Platform provides full operational visibility across your entire fleet of tenant clusters. For a single cluster, install a complete Prometheus and Grafana stack in one click. For fleet-wide visibility, choose between Platform-governed Fleet Observability and direct OpenTelemetry aggregation.

Operators can also monitor the Platform's own health using built-in Prometheus metrics. For centralized log collection across all tenant clusters, the Central HostPath Mapper removes the need for per-cluster agents.

## Workload metrics

vCluster Platform provides two approaches for monitoring tenant cluster workloads. One option focuses on ease of use for a single cluster. The other offers filtering and labeling across multiple clusters into a single Prometheus instance.

| If you want to | Use |
|---|---|
| Monitor a single cluster with a quick, one-click setup | [Basic cluster monitoring](#basic-cluster-monitoring) |
| Aggregate metrics across multiple tenant clusters | [Fleet metrics approaches](#fleet-metrics-approaches) |
| Filter or label metrics by project, space, or tenant cluster | [Fleet metrics approaches](#fleet-metrics-approaches) |

### Basic cluster monitoring

For a single connected cluster, install the `kube-prometheus-stack` app from the Platform UI. This deploys Prometheus and Grafana to the cluster in one step.

1. Go to <NavStep>Infrastructure > Control Plane Clusters</NavStep> and select a cluster.
2. Navigate to the **Apps** tab.
3. Click the **kube-prometheus-stack** recommended app and click **Install**.

After installation, you have a complete monitoring setup with Prometheus scraping cluster metrics and Grafana for visualization. If your tenant clusters run in Shared Nodes mode, see [Prometheus node metrics on shared nodes](./prometheus-shared-nodes.mdx) to configure kubelet scraping.

:::warning
Don't use `kube-prometheus-stack` if you want to aggregate metrics across multiple tenant clusters. Choose one of the fleet metrics approaches below instead.
:::

### Fleet metrics approaches

To aggregate workload metrics across multiple tenant clusters, choose an approach based on the Platform integration you need. Fleet Observability provides Platform-authorized ingestion and querying with trusted labels. The OpenTelemetry guides focus on direct collector-to-backend pipelines.

- [Fleet Observability](../observability/overview.mdx) — Platform-governed path with the observability gateway, scoped metrics access, trusted labels, querying, and troubleshooting
- [Aggregating metrics with OpenTelemetry](./aggregating-metrics.mdx) — simpler direct pipeline with Prometheus, OpenTelemetry Collector, and Grafana
- [Fleet monitoring with OpenTelemetry](./fleet-monitoring-otel.mdx) — advanced direct pipeline with collector examples for Shared Nodes and Private Nodes tenancy models

## Platform health metrics

vCluster Platform exposes [Prometheus-conformant metrics](./metrics.mdx) from its internal components, including the API gateway, integrated Kubernetes API server, controller manager, and Go runtime. These metrics cover request counts, latency, and error rates for all platform operations.

Use a [Prometheus `ServiceMonitor`](./metrics.mdx#create-the-prometheus-servicemonitor) to scrape these metrics automatically, or [access the `/metrics` endpoint directly](./metrics.mdx#access-the-metrics-endpoint-directly-without-a-servicemonitor). For platform pod log level and output format, see [Platform Process Logging](../logging/platform-logging.mdx).

## Log collection

To collect logs from workloads running inside tenant clusters, use the Central HostPath Mapper. It installs a single DaemonSet on the Control Plane Cluster. The DaemonSet handles log path remapping for all tenant clusters and removes the need for per-cluster logging agents. To understand the log types vCluster produces, see [vCluster Logging](/docs/vcluster/manage/logging).

- [Central HostPath Mapper](./central-hostpath-mapper.mdx)

For platform audit logging and platform process log configuration, see [Logging](../logging/overview.mdx).
